--- a/src/main/webapp/WEB-INF/templates/toUpload.html
+++ b/src/main/webapp/WEB-INF/templates/toUpload.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<h1>单文件上传</h1>
-<form method="POST" action="/upload" enctype="multipart/form-data">
-    <input type="file" name="file" /><br/><br/>
-    <input type="submit" value="Submit" />
-</form>
+<h1>文件上传</h1>
+<form id="f" enctype="multipart/form-data">
+    File1:<input id="file" type="file" name="file"><br/>
 
-<h1>多文件上传</h1>
-<form method="POST" action="/uploadMore" enctype="multipart/form-data">
-    文件1： <input type="file" name="file" /><br/><br/>
-    文件2： <input type="file" name="file" /><br/><br/>
-    文件3： <input type="file" name="file" /><br/><br/>
-    <input type="submit" value="Submit" />
+    <input type="button" id="btn" value="提交">
 </form>
 </body>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script>
+
+    $(function () {
+        $("#btn").on("click",function () {
+            //使用FormData对象来提交整个表单，它支持文件的上传
+            var fileObj = document.getElementById("file").files[0];
+            // fileObj.filename = "123.txt";
+            // var renameReportFile =new File([fileObj], "123.txt", {type : fileObj.type});
+            var renameReportFile =new File([fileObj], null, {type : fileObj.type});
+            console.log(renameReportFile);
+
+            // var formData=new FormData(document.getElementById("f"));
+
+            var formData = new FormData();
+            formData.append("file", fileObj);
+
+
+            //额外带来一些数据
+            // formData.append("type",12);
+            // formData.append("name","luozijian");
+            //使用ajax提交
+            $.ajax("http://localhost:9030/ticket/ercp/uploadFile",{
+                type:"post",
+                data:formData,
+                processData:false,//告诉jquery不要去处理请求的数据格式
+                contentType:false,//告诉jquery不要设置请求头的类型
+                success:function (data) {
+                    alert(data);
+                }
+            });
+        })
+    })
+</script>
 </html>
